force-app/main/default/objects/Facility__c/fields/RPM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RPM_End_Date__c</fullName>
    <label>RPM End Date</label>
    <type>Date</type>
</CustomField>