force-app/main/default/objects/Facility__c/fields/RPM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>RPM_Launch_Date__c</fullName>
    <label>RPM Launch Date</label>
    <type>Date</type>
</CustomField>