force-app/main/default/objects/Facility__c/fields/RPM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>RPM_On_Hold_Date__c</fullName>
    <label>RPM On Hold Date</label>
    <type>Date</type>
</CustomField>