force-app/main/default/objects/Facility__c/fields/RPM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>RPM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPM Onboarding</label>
    <type>Checkbox</type>
</CustomField>