force-app/main/default/objects/Facility__c/fields/RPM_Status__c.field-meta.xml
<CustomField>
    <fullName>RPM_Status__c</fullName>
    <formula>IF(RPM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(RPM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(RPM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(RPM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RPM Status</label>
    <type>Text</type>
</CustomField>