force-app/main/default/objects/Facility__c/fields/RPM_Without_Payer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>RPM_Without_Payer_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPM Without Payer Eligibility</label>
    <type>Checkbox</type>
</CustomField>