force-app/main/default/objects/Facility__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Run</label>
    <length>255</length>
    <type>Text</type>
</CustomField>