force-app/main/default/objects/Facility__c/fields/Sandbox_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_ID__c</fullName>
    <label>Sandbox ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>