force-app/main/default/objects/Facility__c/fields/Scheduled_Rollout_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Rollout_Date__c</fullName>
    <label>Scheduled Rollout Date</label>
    <type>Date</type>
</CustomField>