force-app/main/default/objects/Facility__c/fields/Seen__c.field-meta.xml
<CustomField>
    <fullName>Seen__c</fullName>
    <description>Patients at this facility with at least one initial provider visit.</description>
    <label>Seen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>