force-app/main/default/objects/Facility__c/fields/Set_To_Active__c.field-meta.xml
<CustomField>
    <fullName>Set_To_Active__c</fullName>
    <formula>if(
and(
text(Status__c) = &quot;Onboarding&quot;,
 Scheduled_Rollout_Date__c = today()),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set To Active</label>
    <type>Checkbox</type>
</CustomField>