force-app/main/default/objects/Facility__c/fields/Social_Service_Director__c.field-meta.xml
<CustomField>
    <fullName>Social_Service_Director__c</fullName>
    <label>Social Service Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>