force-app/main/default/objects/Facility__c/fields/Social_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Social_Service_Email__c</fullName>
    <label>Social Service Email</label>
    <type>Email</type>
</CustomField>