force-app/main/default/objects/Facility__c/fields/TCM__c.field-meta.xml
<CustomField>
    <fullName>TCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCM</label>
    <type>Checkbox</type>
</CustomField>