force-app/main/default/objects/Facility__c/fields/TCM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TCM_End_Date__c</fullName>
    <label>TCM End Date</label>
    <type>Date</type>
</CustomField>