force-app/main/default/objects/Facility__c/fields/TCM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>TCM_Launch_Date__c</fullName>
    <label>TCM Launch Date</label>
    <type>Date</type>
</CustomField>