force-app/main/default/objects/Facility__c/fields/TCM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>TCM_On_Hold_Date__c</fullName>
    <label>TCM On Hold Date</label>
    <type>Date</type>
</CustomField>