force-app/main/default/objects/Facility__c/fields/TCM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>TCM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCM Onboarding</label>
    <type>Checkbox</type>
</CustomField>