force-app/main/default/objects/Facility__c/fields/TCM_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>TCM_Opt_Out_Date__c</fullName>
    <label>TCM Opt Out Date</label>
    <type>Date</type>
</CustomField>