force-app/main/default/objects/Facility__c/fields/TCM_Status__c.field-meta.xml
<CustomField>
    <fullName>TCM_Status__c</fullName>
    <formula>IF(TCM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(TCM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(TCM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(TCM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCM Status</label>
    <type>Text</type>
</CustomField>