force-app/main/default/objects/Facility__c/fields/Telepsych__c.field-meta.xml
<CustomField>
    <fullName>Telepsych__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telepsych</label>
    <type>Checkbox</type>
</CustomField>