force-app/main/default/objects/Facility__c/fields/Telepsych_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Telepsych_End_Date__c</fullName>
    <label>Telepsych End Date</label>
    <type>Date</type>
</CustomField>