force-app/main/default/objects/Facility__c/fields/Telepsych_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Telepsych_Hold_Date__c</fullName>
    <label>Telepsych Hold Date</label>
    <type>Date</type>
</CustomField>