force-app/main/default/objects/Facility__c/fields/Telepsych_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Telepsych_Launch_Date__c</fullName>
    <label>Telepsych Launch Date</label>
    <type>Date</type>
</CustomField>