force-app/main/default/objects/Facility__c/fields/Telepsych_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Telepsych_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telepsych Onboarding</label>
    <type>Checkbox</type>
</CustomField>