force-app/main/default/objects/Facility__c/fields/Telepsych_Status__c.field-meta.xml
<CustomField>
    <fullName>Telepsych_Status__c</fullName>
    <formula>IF(Telepsych__c, &quot;Active&quot;,
IF(NOT(ISBLANK(Telepsych_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(Telepsych_Hold_Date__c)), &quot;On Hold&quot;,
IF(Telepsych_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telepsych Status</label>
    <type>Text</type>
</CustomField>