force-app/main/default/objects/Facility__c/fields/ThoroughCare_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>ThoroughCare_Email_Sent_Date__c</fullName>
    <description>Stamped the first (and only) time the ThoroughCare onboarding email is sent for this facility. Leave blank to allow sending; a populated value blocks re-sending.</description>
    <inlineHelpText>Stamped the first (and only) time the ThoroughCare onboarding email is sent for this facility. Leave blank to allow sending; a populated value blocks re-sending.</inlineHelpText>
    <label>ThoroughCare Email Sent Date</label>
    <type>Date</type>
</CustomField>