force-app/main/default/objects/Facility__c/fields/ThoroughCare_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>ThoroughCare_Facility_Name__c</fullName>
    <label>ThoroughCare Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>