force-app/main/default/objects/Facility__c/fields/VP_of_Clinical__c.field-meta.xml
<CustomField>
    <fullName>VP_of_Clinical__c</fullName>
    <label>VP of Clinical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>