force-app/main/default/objects/Facility__c/fields/VP_of_Risk_Management__c.field-meta.xml
<CustomField>
    <fullName>VP_of_Risk_Management__c</fullName>
    <label>VP of Risk Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>