force-app/main/default/objects/Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Company__c</columns>
    <columns>Gehrimed_Facility_Name__c</columns>
    <columns>PCC_ID__c</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Latest_Facility_Check_Date__c</columns>
    <columns>PCC_Facility_Code__c</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Credential__c</columns>
    <columns>Latest_Discharge_Run_Date__c</columns>
    <columns>RPM_Without_Payer_Eligibility__c</columns>
    <columns>Latest_CCM_Complete_DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CCM__c</columns>
    <columns>RPM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Company__c</field>
        <operation>contains</operation>
        <value>Embassy</value>
    </filters>
    <label>All</label>
</ListView>