force-app/main/default/objects/Facility__c/listViews/Facility_Audit.listView-meta.xml
<ListView>
    <fullName>Facility_Audit</fullName>
    <columns>PCC_Facility_Code__c</columns>
    <columns>Full_ID__c</columns>
    <columns>PCC_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Credential__c</columns>
    <columns>Latest_Discharge_Run_Date__c</columns>
    <columns>Parent_Company__c</columns>
    <columns>NAME</columns>
    <columns>RPM__c</columns>
    <columns>TCM__c</columns>
    <columns>BHI__c</columns>
    <columns>CCM__c</columns>
    <columns>AHTH__c</columns>
    <filterScope>Everything</filterScope>
    <label>Facility Audit</label>
</ListView>