force-app/main/default/objects/Facility__c/listViews/Need_Updates.listView-meta.xml
<ListView>
    <fullName>Need_Updates</fullName>
    <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
    <columns>Credential__c</columns>
    <columns>Parent_Company__c</columns>
    <columns>NAME</columns>
    <columns>PCC_Facility_Code__c</columns>
    <columns>PCC_ID__c</columns>
    <columns>Run__c</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address__City__s</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PCC_ID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PCC_Facility_Code__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Credential__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Need Updates</label>
</ListView>